# mops

./: .gitignore  README.md  pyproject.toml
mops/: cd.yaml  main.py  mop.yaml
mops/defaults/: cd_defaults.j2  mop_defaults.j2
mops/renderers/: cd.j2  mop.j2
mops/tests/: test_mops.py
mops/utils/: atlassian.py  gcal.py  schema.py
tests/: test_mops.py
