[tool.poetry]
name = "mops"
version = "1.1.0"
description = "MOP and Change Doc creation helper."
authors = ["josh-work <jdickman@cenic.org>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.3"
keyring = "^23.5.0"
PyYAML = "^6.0"
atlassian-python-api = "^3.20.1"
pydantic = "^1.9.0"
typer = "^0.4.0"
DateTime = "^4.4"
google-api-core = "^2.6.0"
google-api-python-client = "^2.39.0"
google-auth = "^2.6.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.0"
googleapis-common-protos = "^1.55.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
